--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma-migrate": "env-cmd -f .env.development.local npx prisma migrate dev --name init"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "@types/leaflet": "^1.9.12",
     "leaflet": "^1.9.4",
+    "mysql2": "^3.10.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "env-cmd": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
