--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mysql2": "^3.10.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
