--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
-    "@types/leaflet": "^1.9.12",
+    "@react-leaflet/core": "^2.1.0",
     "leaflet": "^1.9.4",
     "mysql2": "^3.10.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.14.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
