--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma-migrate": "env-cmd -f .env.development.local npx prisma migrate dev --name init"
+    "prisma-migrate": "env-cmd -f .env.development.local npx prisma migrate dev --name init",
+    "prisma-seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
@@ -31,6 +32,7 @@
     "postcss": "^8",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
