--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "@react-leaflet/core": "^2.1.0",
+    "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "mysql2": "^3.10.0",
     "next": "14.2.3",
@@ -22,6 +23,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20.14.0",
     "@types/react": "^18",
