--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prisma-seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.675.0",
+    "@aws-sdk/lib-storage": "^3.677.0",
     "@prisma/client": "^5.15.0",
     "@react-leaflet/core": "^2.1.0",
     "axios": "^1.7.7",
