--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
